--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <version>1.2.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.11.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <repositories>
