defined variables as global

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ branches:
     - master
 
 env:
-  - FILES_DIR: "./files"
-  - ROOT_USER: "test"
-  - ROOT_PASSWORD: "password"
+  global:
+    - FILES_DIR: "./files",
+    - ROOT_USER: "test"
+    - ROOT_PASSWORD: "password"
