--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 multipart.enabled=false
 spring.http.multipart.max-file-size=1024MB
 spring.http.multipart.max-request-size=1024MB
+allowed.host=http://localhost:4200
